title overflow fix

--- a/src/styles/Home/TitlePopOver.module.css
+++ b/src/styles/Home/TitlePopOver.module.css
@@ -8,7 +8,7 @@
   width: 100%;
   position: relative;
   font-weight: 700;
-  overflow-x: hidden;
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
